# pilotproject-automatic-metadata

./: .env.local.template  .gitignore  README.md  pyproject.toml
scripts/: download_documents.py  download_documents.sbatch  download_xml.py  parse_xml.py  preprocess_metadata.py
src/pilotproject_automatic_metadata/: __init__.py
